# opendata-bridge-notebook

./: README.md  pyproject.toml  renovate.json
OpendataBridgeNotebook/: __init__.py  東京都の緊急避難場所の一覧データ.ipynb
OpendataBridgeNotebook/OpendataModel/: EmergencyEvacuationSite.py  __init__.py
data/: 130001_evacuation_area.csv  nasdaq.csv
notebook/: adhoc.ipynb
notebook/model/: CatBoostRegressorModel.py  EmsembleRegressorModel.py  LightGBMRegressorModel.py
output/: tokyo_evacuation_site.csv
