[tool.poetry]
name = "data-science-starter"
version = "1.0.0"
description = "Data Science starter project."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.4"
pandas = "^2.0.0"
numpy = "^1.23.4"
statsmodels = "^0.13.2"
matplotlib = "^3.6.2"
sklearn = "^0.0.post1"
lightgbm = "^3.3.3"
xgboost = "^1.7.1"
prophet = "^1.1.1"
jupyter = "^1.0.0"
catboost = "^1.1.1"
optuna = "^3.0.5"
category-encoders = "^2.5.1-post.0"
japanize-matplotlib = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
