[tool.poetry]
name = "OpendataBridgeNotebook"
version = "1.0.0"
description = "Data Science starter project."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.12.1"
pandas = "^2.0.0"
numpy = "^1.23.4"
matplotlib = "^3.6.2"
jupyter = "^1.0.0"
optuna = "^3.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
